--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Writo Education - Make yourself a future fit</title>
+    <meta
+      name="description"
+      content="Our website is for students who are preparing for NEET and JEE exams, offering full doubt sessions and community support."
+    />
   </head>
   <body>
     <div id="root"></div>
